# youscan_ir_client

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: actionlint-matcher.json  dependabot.yaml
.github/workflows/: ci.yaml
tests/: conftest.py
tests/assets/: response_1_item.json  response_1_item_absent_fields.json  response_3_items.json  response_3_items_one_failed.json
tests/integration/: test_client.py
tests/unit_tests/: test_factories.py
youscan_ir_client/: client.py  config.py  entities.py  factories.py
