[metadata]
name = youscan-ir-client
url = https://tbd
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    aiohttp >=3.7, <=3.8.3

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_first_party=neuro_config_client
known_tests=tests
combine_as_imports=true

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning:pytest_asyncio
addopts =
    --cov=neuro_config_client
    --cov-report=term
    --cov-report=xml:.coverage.xml

[coverage:run]
branch = True
source = platform_config_client

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional=true


[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true
